--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
   <div class="search-bar"> <input type="text" placeholder="Search images..." id="search-input" />
     <button type="button" id="search-button">Search</button>
   </div>
-  <ul class="gallery"></ul>
-
+  <ul class="gallery"></ul><br>
+  <button type="button" id="load-button" class="visually-hidden">Load more</button>
   <script src="./main.js" type="module"></script>
 </body>
 
