--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     <button type="button" id="search-button">Search</button>
   </div>
   <ul class="gallery"></ul><br>
+  <div class="loader visually-hidden" id="loader"></div><br>
   <button type="button" id="load-button" class="visually-hidden">Load more</button>
   <script src="./main.js" type="module"></script>
 </body>
